// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`table cell renderer renders 1`] = `
<div>
  <div
    class="table-cell test-cell"
    data-cy="table-cell"
    style="height: 100px; overflow: hidden;"
    title="tooltip message"
  >
    <div
      class="table-cell__value--center table-cell__value "
      data-cy="table-cell__value"
    >
      <span>
        cell value
      </span>
    </div>
  </div>
</div>
`;

exports[`table cell renderer renders using the TableCellRendererFramework method 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="table-cell "
        data-cy="table-cell"
        style="height: 36px; overflow: hidden;"
        title="1"
      >
        <div
          class="table-cell__value--date table-cell__value--numeric table-cell__value "
          data-cy="table-cell__value"
        >
          <span>
            1
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="table-cell "
      data-cy="table-cell"
      style="height: 36px; overflow: hidden;"
      title="1"
    >
      <div
        class="table-cell__value--date table-cell__value--numeric table-cell__value "
        data-cy="table-cell__value"
      >
        <span>
          1
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`table cell renderer renders using the TableCellRendererFramework method 2`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="table-cell "
        data-cy="table-cell"
        style="height: 36px; overflow: hidden;"
        title="Mock Value"
      >
        <div
          class="table-cell__value--date table-cell__value--numeric table-cell__value "
          data-cy="table-cell__value"
        >
          <span>
            Mock Value
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="table-cell "
      data-cy="table-cell"
      style="height: 36px; overflow: hidden;"
      title="Mock Value"
    >
      <div
        class="table-cell__value--date table-cell__value--numeric table-cell__value "
        data-cy="table-cell__value"
      >
        <span>
          Mock Value
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`table cell renderer renders with leftChild 1`] = `
<div>
  <div
    class="table-cell test-cell"
    data-cy="table-cell"
    style="height: 100px; overflow: hidden;"
    title="tooltip message"
  >
    <div>
       this is a child div
    </div>
    <div
      class="table-cell__value--center table-cell__value "
      data-cy="table-cell__value"
    >
      <span>
        cell value
      </span>
    </div>
  </div>
</div>
`;
